# IMAge-enGINE

./: .gitignore  CMakeLists.txt  IMAGEN_en_CN.qm  IMAGEN_zh_CN.qm  LICENSE  MR_Config.ini  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingDialog.cpp  settingDialog.h  settingDialog.ui  vusionAboutDialog.cxx  vusionAboutDialog.h  vusionAboutDialog.ui
DicomWidget/: CMakeLists.txt  vuDICOMBrowser.cpp  vuDICOMBrowser.h  vuDICOMBrowser.ui
DiffusionCore/: CMakeLists.txt  DiffusionCore.cpp  DiffusionCore.h  DiffusionCore.ui  itkAdcMapFilter.h  itkAdcMapFilter.hxx  itkComputedAdcFilter.h  itkComputedAdcFilter.hxx  itkComputedEadcFilter.h  itkComputedEadcFilter.hxx  itkMaskVectorImageFilter.h  itkMaskVectorImageFilter.hxx
DisplayCore/: CMakeLists.txt  displayport.cpp  displayport.h  vtkMultiViewInteractorStyleImage.cxx  vtkMultiViewInteractorStyleImage.h  vtkMultiViewInteractorStyleImagePaint.cxx  vtkMultiViewInteractorStyleImagePaint.h  vtkUDInteractorStyleImage.h  vtkVusionContourLineInterpolator.cxx  vtkVusionContourLineInterpolator.h  vtkVusionContourRepresentation.cxx  vtkVusionContourRepresentation.h  vtkVusionContourWidget.cxx  vtkVusionContourWidget.h  vtkVusionImageMapToWindowLevelColors.cxx  vtkVusionImageMapToWindowLevelColors.h  vtkVusionMultiView.cxx  vtkVusionMultiView.h  vtkVusionPainter.h  vuWindowWidget.cpp  vuWindowWidget.h  vuWindowWidget.ui
Segmentation/: CMakeLists.txt  FastGrowCutSegWrapperITK.cxx  FastGrowCutSegWrapperITK.h  FastGrowCutSegmenter.h  FastGrowCutSegmenter.hxx  fibheap.cpp  fibheap.h  qVusionRoiModule.cpp  qVusionRoiModule.h  qVusionRoiModule.ui  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  utilities.h
Utility/: CMakeLists.txt  DKIHelper.h  DicomHelper.cpp  DicomHelper.h  RigidRegistration3d.h  SharedFunctions.h  bvalueDialog.cpp  bvalueDialog.h  vtkDICOMVUSIONGenerator.cxx  vtkDICOMVUSIONGenerator.h
darkstyle/: style.qrc
darkstyle/rc/: Thumbs.db
